--- a/src/runtime.yml
+++ b/src/runtime.yml
@@ -12,6 +12,11 @@ passwd:
 # Create an update wariness and reboot strategy, as we're not in a clustered environment we don't use fleet_lock reboot strategy.
 storage:
   files:
+    - path: /etc/hostname
+      contents:
+        inline: |
+          ns1.bitswalk.net
+
     - path: /etc/zincati/config.d/55-updates-strategy.toml
       contents:
         inline: |
@@ -19,3 +24,24 @@ storage:
           rollout_wariness = 0.5
           [updates]
           strategy = "immediate"
+
+systemd:
+  units:
+    - name: overlay-install.service
+      enabled: true
+      contents: |
+        [Unit]
+        Description=Install Overlay Packages
+        ConditionFirstBoot=yes
+        Wants=network-online.target
+        After=network-online.target
+        After=multi-user.target
+        Before=boot-complete.target
+        [Service]
+        Type=oneshot
+        ExecStart=rpm-ostree install --reboot cockpit-bridge cockpit-ostree cockpit-system cockpit-podman
+        # An alternative to --reboot
+        # ExecStartPost=rpm-ostree ex livefs --i-like-danger
+        [Install]
+        RequiredBy=boot-complete.target
+        WantedBy=multi-user.target
