--- a/src/runtime.yml
+++ b/src/runtime.yml
@@ -58,7 +58,7 @@ systemd:
 
         [Service]
         ExecStartPre=/bin/podman pull cockpit/ws
-        ExecStart=/bin/podman runlabel RUN --name cockpit-ws cockpit/ws
+        ExecStart=/bin/podman container runlabel --name cockpit-ws RUN cockpit/ws
 
         [Install]
         WantedBy=multi-user.target
