--- a/src/runtime.yml
+++ b/src/runtime.yml
@@ -39,9 +39,7 @@ systemd:
         Before=boot-complete.target
         [Service]
         Type=oneshot
-        ExecStart=rpm-ostree install --reboot cockpit-bridge cockpit-ostree cockpit-system cockpit-podman
-        # An alternative to --reboot
-        # ExecStartPost=rpm-ostree ex livefs --i-like-danger
+        ExecStart=rpm-ostree install --reboot cockpit-system cockpit-ostree cockpit-podman cockpit-networkmanager
         [Install]
         RequiredBy=boot-complete.target
         WantedBy=multi-user.target
@@ -57,8 +55,7 @@ systemd:
         After=boot-complete.target
 
         [Service]
-        ExecStartPre=/bin/podman pull cockpit/ws
-        ExecStart=/bin/podman container runlabel --name cockpit-ws RUN cockpit/ws
+        ExecStart=sudo podman container runlabel --name cockpit RUN cockpit/ws
 
         [Install]
         WantedBy=multi-user.target
