Improve default ifnition config.

--- a/src/bootstrap.yml
+++ b/src/bootstrap.yml
@@ -21,11 +21,15 @@ storage:
         inline: |
           ns1.bitswalk.net
 
-    - path: /etc/zincati/config.d/55-updates-strategy.toml
+    - path: /etc/zincati/config.d/51-rollout-wariness.toml
       contents:
         inline: |
           [identity]
           rollout_wariness = 0.5
+
+    - path: /etc/zincati/config.d/55-updates-strategy.toml
+      contents:
+        inline: |
           [updates]
           strategy = "immediate"
 
