Change SSH Default port to avoid conflict with git repo. Use rpm-ostree instead of container for cockpit-ws.

--- a/src/bootstrap.yml
+++ b/src/bootstrap.yml
@@ -32,6 +32,23 @@ storage:
         inline: |
           [updates]
           strategy = "immediate"
+    
+    - path: /etc/ssh/sshd_config
+      append:
+        inline: |
+          Port 2222
+          LoginGraceTime 2m
+          StrictModes yes
+          MaxAuthTries 4
+          MaxSessions 5
+          PubkeyAuthentication yes
+          PermitEmptyPassword no
+          AllowAgentForwarding yes
+          AllowTcpForwarding no
+          GatewayPorts no
+          X11Forwarding no
+          TCPKeepAlive yes
+          Compression delayed
 
 systemd:
   units:
@@ -48,7 +65,7 @@ systemd:
 
         [Service]
         Type=oneshot
-        ExecStart=rpm-ostree install cockpit-system cockpit-ostree cockpit-podman cockpit-bridge cockpit-networkmanager cockpit-storaged --reboot
+        ExecStart=rpm-ostree install cockpit-system cockpit-ostree cockpit-podman cockpit-bridge cockpit-networkmanager cockpit-storaged cockpit-ws --reboot
 
         [Install]
         RequiredBy=boot-complete.target
