Improve file permission.

--- a/src/bootstrap.yml
+++ b/src/bootstrap.yml
@@ -34,6 +34,7 @@ storage:
           strategy = "immediate"
     
     - path: /etc/ssh/sshd_config
+      mode: 0640
       append:
         - inline: |
             Port 2222
