--- a/src/bootstrap.yml
+++ b/src/bootstrap.yml
@@ -56,6 +56,25 @@ storage:
 
 systemd:
   units:
+    - name: sshd-selinux.service
+      enabled: true
+      contents: |
+        [Unit]
+        Description=Change selinux ssh domain config
+        ConditionFirstBoot=yes
+        Wants=network-online.target
+        After=network-online.target
+        After=multi-user.target
+        Before=boot-complete.target
+
+        [Service]
+        Type=oneshot
+        ExecStart=semanage port -a -t ssh_port_t -p tcp 2222
+
+        [Install]
+        RequiredBy=boot-complete.target
+        WantedBy=multi-user.target
+
     - name: overlay-install.service
       enabled: true
       contents: |
