--- a/src/runtime.yml
+++ b/src/runtime.yml
@@ -3,6 +3,24 @@ version: 1.0.0
 
 systemd:
   units:
+    - name: vault.service
+      enabled: true
+      contents: |
+        [Unit]
+        Description=secret manager pod service
+
+        [Service]
+        Type=oneshot
+        ExecStartPre=/usr/bin/podman pod rm secret
+        ExecStartPre=/usr/bin/podman pod create --name secret
+        ExecStart=/usr/bin/podman run --name vault -d --pod secret -v /var/lib/vault/config/:/vault/config/:ro -v /var/lib/vault/data/:/vault/file/:z vault:latest server
+        ExecStop=/usr/bin/podman pod stop secret
+        RemainAfterExit=yes
+        KillMode=none
+
+        [Install]
+        WantedBy=multi-user.target
+
     - name: gitea.service
       enabled: true
       contents: |
