Fix already existing group. Fix FCCT transpilation encoding. Fix MySQL conflicting directive.

--- a/src/runtime.yml
+++ b/src/runtime.yml
@@ -31,7 +31,7 @@ systemd:
         Type=oneshot
         ExecStartPre=/usr/bin/podman pod rm sources
         ExecStartPre=/usr/bin/podman pod create --name sources -p 2222:22 -p 80:3000
-        ExecStartPre=/usr/bin/podman run --name gitea-db -d --pod sources -v /var/lib/gitea/db/:/var/lib/mysql:z -e MYSQL_RANDOM_ROOT_PASSWORD=yes -e MYSQL_DATABASE="gitea" -e MYSQL_USER="gitea" -e MYSQL_PASSWORD="Ch@ng3M3" mariadb:10.5.1
+        ExecStartPre=/usr/bin/podman run --name gitea-db -d --pod sources -v /var/lib/gitea/db/:/var/lib/mysql:z -e MYSQL_RANDOM_ROOT_PASSWORD=yes -e MYSQL_DATABASE="gitea" -e MYSQL_USER="gitea" mariadb:10.5.1
         ExecStart=/usr/bin/podman run --name gitea-app -d --pod sources -v /var/lib/gitea/:/data:z gitea/gitea:1.11.3
         ExecStop=/usr/bin/podman pod stop sources
         RemainAfterExit=yes
