Try to fix improper syntax validation.

--- a/src/bootstrap.yml
+++ b/src/bootstrap.yml
@@ -2,5 +2,5 @@ variant: fcos
 version: 1.0.0
 ignition:
   config:
-    merge:
-      - source: https://raw.githubusercontent.com/gtherond/ignition/master/build/runtime.ign
+    replace:
+      source: https://raw.githubusercontent.com/gtherond/ignition/master/build/runtime.ign
